--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "create-react-app": "^2.1.8",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.8",
     "reactstrap": "^8.0.0"
   },
